[project]
name = "transload"
version = "0.1.0"
description = ""
authors = [ { name = "Dmitri Smirnov", email = "dmixsmi@gmail.com" } ]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=3.0",
    "ray>=2.55.1",
    "torch>=2.11.0",
]

[project.scripts]
simload = "transload.simload:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["transload"]
